--- a/dz5/pom.xml
+++ b/dz5/pom.xml
@@ -2,14 +2,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.boldyrev.ma.spring1</groupId>
-    <artifactId>dz3</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>dz5</artifactId>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>dz3</name>
     <url>http://maven.apache.org</url>
 
     <properties>
-        <spring.version>4.3.0.RELEASE</spring.version>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+        <spring.version>5.0.6.RELEASE</spring.version>
     </properties>
 
     <build>
@@ -54,9 +55,14 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>1.10.5.RELEASE</version>
+            <version>2.0.7.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -83,6 +89,16 @@
             <groupId>javax.annotation</groupId>
             <artifactId>jsr250-api</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
         </dependency>
     </dependencies>
 </project>
